--- a/out.tex
+++ b/out.tex
@@ -10,10 +10,10 @@ while (i < 4)
 \end{myverbbox}
 \element{my_group}{
 \begin{question}{arraywalk}
-After the execution of the following code:\\
-[3pt]
+After the execution of the following code:
+\\[3pt]
 \hspace*{1em}\fbox{\arraywalk}
-
+\\[3pt]
 What values are in the \texttt{tab} array?
 \setlength{\columnseprule}{0pt}
 \setlength{\columnsep}{0pt}
@@ -39,10 +39,10 @@ else
 \end{myverbbox}
 \element{my_group}{
 \begin{question}{ifelse}
-After the execution of the following code:\\
-[3pt]
+After the execution of the following code:
+\\[3pt]
 \hspace*{1em}\fbox{\ifelse}
-
+\\[3pt]
 What is the value of \texttt{c}?
 \setlength{\columnseprule}{0pt}
 \setlength{\columnsep}{0pt}
@@ -67,9 +67,9 @@ void add_ten(int *p)
 \element{my_group}{
 \begin{questionmult}{parameterpassing}
 Consider the following function:\\
-[3pt]
+\\[3pt]
 \hspace*{1em}\fbox{\parameterpassing}
-
+\\[3pt]
 After the line \texttt{int n = 2, *p;}, how is it possible to modify the value of \texttt{n}?
 \setlength{\columnseprule}{0pt}
 \setlength{\columnsep}{0pt}
